--- a/hello-world.html
+++ b/hello-world.html
@@ -3,7 +3,7 @@
 
 <p>This page is an attempt to greet everyone on Earth using our various human languages.  We're interested to see how long our list can become.</p>
 
-<p>We'll start with languages that the Epicodus staff could offer without using Google. </p>
+<p>We'll start with languages that the Epicodus staff could offer without using Google.</p>
 
 <ul>
   <li>English: Hello, world!</li>
@@ -11,4 +11,6 @@
   <li>Japanese: Konnichiwa, sekai!</li>
   <li>French: Bonjour, monde!</li>
   <li>Kinyarwanda: Mwirwe, isi!</li>
+  <li>German: Guten tag, Welt!</li>
+  <li>Pig Latin: ello-hay, orld-way!</li>
 </ul>
